--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,26 +12,23 @@
           <a class="nav-link" routerLink="/index" routerLinkActive="active-button">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/projects" routerLinkActive="active-button">Projects</a>
+          <a *ngIf="isLogin" class="nav-link" routerLink="/projects" routerLinkActive="active-button">Projects</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" routerLink="profile" routerLinkActive="active-button">Profile</a>
-        </li> -->
       </ul>
       <ul class="navbar-nav navbar-right">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/registration" routerLinkActive="active-button">
+          <a *ngIf="!isLogin" class="nav-link" routerLink="/registration" routerLinkActive="active-button">
             <fa-icon [icon]="faSignInAlt"></fa-icon>Sign Up
           </a>
         </li>
-        <li class="nav-item">
-          <button type="button" class="btn nav-link log-button">
+        <li *ngIf="!isLogin" class="nav-item">
+          <button class="btn nav-link log-button" (click)="openModal(modalLogIn)">
             <fa-icon [icon]="faSignInAlt"></fa-icon>Login
           </button>
         </li>
-        <li class="nav-item">
+        <li *ngIf="isLogin" class="nav-item">
           <form method="POST">
-            <button class="btn nav-link log-button" type="submit" id="logout" value="Submit">
+            <button class="btn nav-link log-button" (click)="logout()">
               <fa-icon [icon]="faSignOutAlt"></fa-icon>Logout
             </button>
           </form>
@@ -40,31 +37,53 @@
     </nav>
     <!--Navbar end-->
     <!-- Modal - Login Form -->
-    <div class="modal fade centered-modal" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-sm" role="document">
-        <div class="modal-content">
-          <div class="modal-body">
-            <button type="button" class="close float-right" id="close-login-modal-button" data-dismiss="modal"></button>
-            <form action="" method="post" id="form-login">
-              <div class="text-danger">error</div>
-              <div class="form-group">
-                <label for="user-name">Username</label>    
-                <input type="text" name="user_name" id="user-name" class="form-control"  placeholder="Username" value=""/>
-              </div>
-              <div class="form-group">
-                <label for="user_password">Password</label>    
-                <input type="password" id="user-password" class="form-control" placeholder="Password"  value="" />
-              </div>
-              <div class="field-group">
-                <input type="checkbox" name="remember" id="remember" checked />
-                <label for="remember">Remember me</label>
-                <button type="submit" class="btn btn-success float-right" value="Login">Login</button>
-              </div>
-            </form>
-          </div>
+    <ng-template  #modalLogIn let-modal>
+      <div class="modal-content">
+        <div class="modal-header">
+          Login
+          <button type="button" class="close float-right" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="text-danger" *ngIf="validation==false">Error of validation</div>
+          <form action="" method="post" id="form-login">
+            <div class="form-group">
+              <label for="user-name">Username</label>    
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Username"
+                autocomplete="username"
+                pattern=".{8,}"
+                title="Eight or more characters"
+                [(ngModel)]="username"
+                [ngModelOptions]="{standalone: true}"
+              />
+            </div>
+            <div class="form-group">
+              <label for="user-password">Password</label>    
+              <input
+                type="password"
+                class="form-control"
+                placeholder="Password"
+                autocomplete="current-password"
+                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more"
+                [(ngModel)]="password"
+                [ngModelOptions]="{standalone: true}"
+              />
+            </div>
+            <div class="field-group">
+              <button type="button" class="btn btn-success float-right" 
+              (click)="
+                login();
+              ">Login</button>
+            </div>
+          </form>
         </div>
       </div>
-    </div>
+    </ng-template>
     <!-- // Modal -->
   </body>
 </html>
