--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,10 +75,11 @@
               />
             </div>
             <div class="field-group">
-              <button type="button" class="btn btn-success float-right" 
-              (click)="
-                login();
-              ">Login</button>
+              <button
+              type="button"
+              class="btn btn-success float-right"
+              (click)="login();"
+              >Login</button>
             </div>
           </form>
         </div>
