--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,12 @@
           <a class="nav-link" routerLink="/index" routerLinkActive="active-button">Home</a>
         </li>
         <li class="nav-item">
-          <a *ngIf="isLogin" class="nav-link" routerLink="/projects" routerLinkActive="active-button">Projects</a>
+          <a *ngIf="isLogin" class="nav-link" (click)="isLoginF()" routerLink="/projects" routerLinkActive="active-button">Projects</a>
         </li>
       </ul>
       <ul class="navbar-nav navbar-right">
         <li class="nav-item">
-          <a *ngIf="!isLogin" class="nav-link" routerLink="/registration" routerLinkActive="active-button">
+          <a *ngIf="!isLogin" class="nav-link" (click)="isLoginF()" routerLink="/registration" routerLinkActive="active-button">
             <fa-icon [icon]="faSignInAlt"></fa-icon>Sign Up
           </a>
         </li>
