--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       </ul>
       <ul class="navbar-nav navbar-right">
         <li class="nav-item">
-          <a *ngIf="!isLogin" class="nav-link" (click)="isLoginF()" routerLink="/registration" routerLinkActive="active-button">
+          <a *ngIf="!isLogin" class="nav-link" routerLink="/registration" routerLinkActive="active-button">
             <fa-icon [icon]="faSignInAlt"></fa-icon>Sign Up
           </a>
         </li>
